force-app/main/default/objects/Application_Potential__c/Application_Potential__c.object-meta.xml
<CustomObject>
    <description>Based on Industry Application Potentials Data</description>
    <label>Application Potential</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Application Potential Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Potentials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>