force-app/main/default/objects/Application_Potential__c/fields/Cleaners__c.field-meta.xml
<CustomField>
    <fullName>Cleaners__c</fullName>
    <label>Cleaners</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>