force-app/main/default/objects/Application_Potential__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <label>Equipment</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>