force-app/main/default/objects/Application_Potential__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>TextArea</type>
</CustomField>