force-app/main/default/objects/Application_Potential__c/fields/Machinery_Adhesives__c.field-meta.xml
<CustomField>
    <fullName>Machinery_Adhesives__c</fullName>
    <label>Machinery Adhesives</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>