force-app/main/default/objects/Application_Potential__c/fields/Potting_Impregnation__c.field-meta.xml
<CustomField>
    <fullName>Potting_Impregnation__c</fullName>
    <label>Potting &amp; Impregnation</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>