force-app/main/default/objects/Application_Potential__c/fields/Protective_Coatings__c.field-meta.xml
<CustomField>
    <fullName>Protective_Coatings__c</fullName>
    <label>Protective Coatings</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>