force-app/main/default/objects/Application_Potential__c/fields/Sealing__c.field-meta.xml
<CustomField>
    <fullName>Sealing__c</fullName>
    <label>Sealing</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>