force-app/main/default/objects/Application_Potential__c/fields/Structural_Bonding__c.field-meta.xml
<CustomField>
    <fullName>Structural_Bonding__c</fullName>
    <label>Structural Bonding</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>