force-app/main/default/objects/Application_Potential__c/fields/TYPICAL_DEVICES__c.field-meta.xml
<CustomField>
    <fullName>TYPICAL_DEVICES__c</fullName>
    <label>TYPICAL DEVICES</label>
    <length>255</length>
    <type>Text</type>
</CustomField>