force-app/main/default/objects/Application_Potential__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Equipment__c</columns>
    <columns>Functional_Coatings__c</columns>
    <columns>Industry__c</columns>
    <columns>Instant_Adhesives__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>